# crawl-enhance

./: .gitignore  README.md  giáo_án_web_crawling.md  tiến trình.md
batdongsan_crawler/: .gitignore  README.md  models.py  pyproject.toml  spider.py
batdongsan_crawler/src/batdongsan/: __init__.py  __main__.py  container.py
batdongsan_crawler/src/batdongsan/application/: __init__.py
batdongsan_crawler/src/batdongsan/application/services/: __init__.py  spider_service.py
batdongsan_crawler/src/batdongsan/domain/: __init__.py  entities.py  interfaces.py
batdongsan_crawler/src/batdongsan/infrastructure/: __init__.py
batdongsan_crawler/src/batdongsan/infrastructure/config/: __init__.py  settings.py
batdongsan_crawler/src/batdongsan/infrastructure/http/: __init__.py  curl_client.py
batdongsan_crawler/src/batdongsan/infrastructure/parsers/: __init__.py  batdongsan_parser.py
batdongsan_crawler/src/batdongsan/infrastructure/storage/: __init__.py  frontier.py  storage.py
batdongsan_crawler/src/batdongsan/interface/: __init__.py
batdongsan_crawler/src/batdongsan/interface/cli/: __init__.py  cli.py
bonbanh_crawler/: README.md  crawler.py  main.py  models.py  requirements.txt
cafef_crawler/: README.md  crawler.py  main.py  models.py  requirements.txt
cafef_crawler_advanced/: README.md  crawler.py  inspect_api.py  main.py  models.py  requirements.txt
jupter_version/: 01_static_html_scraping.ipynb  02_dynamic_content_scraping.ipynb  03_api_based_scraping.ipynb  PRE_SEMINAR_GUIDE.md  README.md
teaching-examples/: README.md
(+26 files in other folders)
